--- a/roles/spine/tasks/main.yml
+++ b/roles/spine/tasks/main.yml
@@ -30,7 +30,7 @@
         mode: layer3
         mtu: '9216'
         enabled: yes
-  with_items: '{{ leaf_facing_ifaces }}'
+  with_items: '{{ fabric_ifaces }}'
 
 - name: Configuring Leaf Facing interfaces with IP Unnumbered Parameters
   nxos_config:
@@ -39,7 +39,7 @@
       - ip unnumbered loopback 0
     parents:
       - 'interface {{item.name}}'
-  with_items: '{{ leaf_facing_ifaces }}'
+  with_items: '{{ fabric_ifaces }}'
 
 - name: Creating OSPF Process 'OSPF_UNDERLAY_NET'
   cisco.nxos.nxos_ospfv2:
@@ -54,7 +54,7 @@
       - ip ospf network point-to-point
     parents:
       - 'interface {{ item.name }}'
-  with_items: '{{ leaf_facing_ifaces }}'
+  with_items: '{{ fabric_ifaces }}'
 
 - name: Assigning Interfaces to the OSPF Process
   cisco.nxos.nxos_ospf_interfaces:
@@ -67,7 +67,7 @@
                 area:
                   area_id: 0
   with_items:
-    - '{{ leaf_facing_ifaces }}'
+    - '{{ fabric_ifaces }}'
     - '{{ loopback_ifaces }}'
 
 - name: Configuring PIM RP Addresses
@@ -86,7 +86,7 @@
     interface: '{{ item.name }}'
     sparse: yes
   with_items:
-    -  '{{ leaf_facing_ifaces}}'
+    -  '{{ fabric_ifaces}}'
     -  '{{ loopback_ifaces }}'
 
 - name: Creating BGP Process
