--- a/delete_vxlan_configuration.yml
+++ b/delete_vxlan_configuration.yml
@@ -9,6 +9,10 @@
       nxos_config:
         lines:
           - no fabric forwarding anycast-gateway-mac 
+      register: result
+      fail:
+        msg: "{{ result.stderr }}"
+      when: "'FAILED' in result.stderr"
       ignore_errors: yes
       
     # Needed to add this as the loopback interfaces were not being deleted 
