Created a cleanup/deletion script

--- a/delete_vxlan_configuration.yml
+++ b/delete_vxlan_configuration.yml
@@ -10,11 +10,12 @@
         lines:
           - no fabric forwarding anycast-gateway-mac 
       register: result
-      fail:
-        msg: "{{ result.stderr }}"
-      when: "'FAILED' in result.stderr"
       ignore_errors: yes
       
+    - name: fail the play if the previous command did not succeed
+      fail:
+        msg: "{{result}} {{result.stderr}}"
+      when: "'FAILED' in result.stderr"
     # Needed to add this as the loopback interfaces were not being deleted 
     # and I don't have time to troubleshoot
     - name: Delete Loopback Interfaces
