--- a/troubleshoot_host.yml
+++ b/troubleshoot_host.yml
@@ -8,3 +8,9 @@
       raw: ping -c 3 8.8.8.8; exit 0
       register: ping_results
       ignore_errors: true
+  
+    - name:  STDOUT - Verificaiton Commands
+      debug: 
+        msg: "{{ ping_results }}"
+      ignore_errors: yes
+      
