--- a/troubleshoot_host.yml
+++ b/troubleshoot_host.yml
@@ -5,7 +5,7 @@
     ansible_ssh_pass: cisco
   tasks:
     - name: Ping hosts
-      raw: ping -c 3 10.10.53.151; exit 0
+      raw: ping -c 3 10.10.53.151
       register: ping_results
       ignore_errors: true
   
