--- a/troubleshoot_host.yml
+++ b/troubleshoot_host.yml
@@ -5,7 +5,7 @@
     ansible_ssh_pass: cisco
   tasks:
     - name: Ping hosts
-      raw: ping -c 3 8.8.8.8
+      raw: ping -c 3 8.8.8.8; exit 0
       register: ping_results
       ignore_errors: true
   
