--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -103,3 +103,20 @@
       with_items: "{{ echo.results }}"
       loop_control:
         label: "{{ item.item }}"
+    
+- hosts: 10.10.53.152
+  gather_facts: no
+  vars:
+    ansible_user: cisco
+    ansible_ssh_pass: cisco
+  tasks:
+    - name: Ping host-b
+      raw: ping -c 3 8.8.8.8; exit 0
+      register: ping_results
+      ignore_errors: true
+  
+    - name:  Ping to host-b results
+      debug: 
+        msg: "{{ ping_results.stdout_lines }}"
+      ignore_errors: yes
+      
