--- a/hosts.yml
+++ b/hosts.yml
@@ -1,7 +1,9 @@
 spine:
   hosts:
-    spine-1: 10.10.53.153
-    spine-2: 10.10.53.154
+    spine-1: 
+      ansible_host: 10.10.53.153
+    spine-2: 
+      ansible_host: 10.10.53.154
   vars:
     ansible_connection: ansible.netcommon.httpapi
     ansible_network_os: cisco.nxos.nxos
@@ -12,8 +14,10 @@ spine:
     ansible_password: cisco
 leaf:
   hosts:
-    leaf-1: 10.10.53.155
-    leaf-2: 10.10.53.156
+    leaf-1: 
+      ansible_host: 10.10.53.155
+    leaf-2: 
+      ansible_host: 10.10.53.156
   vars:
     ansible_connection: ansible.netcommon.httpapi
     ansible_network_os: cisco.nxos.nxos
