Adding troubleshooting task to ping between hosts

--- a/hosts.yml
+++ b/hosts.yml
@@ -26,3 +26,8 @@ leaf:
     ansible_httpapi_validate_certs: no
     ansible_user: cisco
     ansible_password: cisco
+
+server:
+  hosts:
+    host-a: 
+      ansible_host: 10.10.53.152
