--- a/troubleshooting_commands.yml
+++ b/troubleshooting_commands.yml
@@ -117,21 +117,21 @@
         tags: 
         - ping
   tasks:
-    - name: TAG PROVIDED - Running ping
+    - name: TAG PROVIDED - Filtering endpoints to ping 
       set_fact:
         who_to_ping: "{{ who_to_ping | json_query(query) }}"
       vars:
         query: "[?tags.contains(@, '{{ tag }}')].endpoint"
       when: tag != ""
     
-    - name: NO TAG PROVIDED - Running ping
+    - name: NO TAG PROVIDED - Filtering endpoints to ping 
       set_fact:
         who_to_ping: "{{ who_to_ping | json_query(query) }}"
       vars:
         query: "[].endpoint"
       when: tag == ""
 
-    - name: Run show commands on remote devices
+    - name: Pinging from host-a to other hosts
       raw: "{{ item }}"
       ignore_errors: yes
       register: echo
