--- a/hosts.yml
+++ b/hosts.yml
@@ -31,3 +31,5 @@ server:
   hosts:
     host-a: 
       ansible_host: 10.10.53.152
+  vars:
+    ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
